--- a/index.html
+++ b/index.html
@@ -2328,6 +2328,21 @@
             applyFontSize();
             scheduleSnap();
         });
+
+        // Disable double‑tap to zoom on the whole document
+        let lastTouchEnd = 0;
+        document.addEventListener(
+            'touchend',
+            function (event) {
+                const now = Date.now();
+                if (now - lastTouchEnd <= 300) {
+                    event.preventDefault(); // block the zoom
+                }
+                lastTouchEnd = now;
+            },
+            { passive: false }
+        );
+
     </script>
 </body>
 </html>
